Fixed text alignment issue

--- a/styles/scss/globals.scss
+++ b/styles/scss/globals.scss
@@ -19,6 +19,7 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     h1{
         font-weight: 300;
         color: $purple;
